<resources>
    <string name="app_name">Weather</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_alerts">Alerts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="location_set_confirmation_message">"Your location has been set to: "</string>
    <string name="get_location_from">Get location from:</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature_units">Temperature Units</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="speed_units">Speed Units</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="loading">Loading</string>
    <string name="current_location">Current Location:</string>
    <string name="choose_a_city">Choose a city</string>
    <string name="no_location_dialog_title">Can\'t detect your location!</string>
    <string name="no_location_dialog_message">Please choose your location</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="clouds">Clouds</string>
    <string name="pressure">Pressure</string>
    <string name="add_alert">Add Alert</string>
    <string name="remove_alert">Remove Alert</string>
    <string name="remove_alert_confirm_message">Are you sure you want to remove this alert?</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="starting_from">Starting from</string>
    <string name="until">Until</string>
    <string name="submit">Submit</string>
    <string name="no_alerts_added">No Alerts Added</string>
    <string name="every_thing_is_fine">Everything is fine today</string>
    <string name="enjoy">ENJOY!</string>
    <string name="there_will_be">"There will be "</string>
    <string name="in_word">" in "</string>
    <string name="alert_time">Alert time</string>
    <string name="no_connection">No internet connection</string>
    <string name="no_connection_message">You must have internet connection to set your location</string>
    <string name="no_connection_add_favorite_message">You must have internet connection to add a place to your favorites</string>
    <string name="no_connection_add_alert_message">You must have internet connection to add an alert</string>
    <string name="no_favorite_locations">No favorite locations</string>
    <string name="no_connection_change_preferences_message">You must have internet connection to change your preferences</string>
</resources>